EVA-57 Feat: Se agrega el display none al icono del numero de notificaciones Porque se mostraba y se ocultaba al recargar la ventana

--- a/EVA/templates/EVA/_common/header.html
+++ b/EVA/templates/EVA/_common/header.html
@@ -45,7 +45,7 @@
         <div>
             <a href="#" class="header-icon" data-toggle="dropdown" id="titulo_not">
                 <i class="fal fa-bell"></i>
-                <span class="badge badge-icon" id="icono_not"></span>
+                <span class="badge badge-icon" id="icono_not" style="display: none"></span>
             </a>
             <div class="dropdown-menu dropdown-menu-animated dropdown-xl">
                 <div class="dropdown-header bg-trans-gradient d-flex justify-content-center align-items-center rounded-top mb-2">
