EVA-58 Feat: Se crea un input para almacenar los datos de la notificacion con el token Se agrega al index y al iniciar sesion porque es en estas vistas a las que el usuario ingresa desde un enlace externo Se agrega el llamado del js a archivo base que controla la información de estos inputs

--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -154,6 +154,7 @@
         <script src="{% static 'EVA/Plantilla/js/custom/ajaxDjango.js' %}"></script>
         <script src="{% static 'Notificaciones/js/cargarNotificaciones.js' %}"></script>
         <script src="{% static 'Notificaciones/js/accionesNotificacion.js' %}"></script>
+        <script src="{% static 'Notificaciones/js/datosToken.js' %}"></script>
 
        {% block scripts %}
        {% endblock %}
