--- a/EVA/templates/EVA/index.html
+++ b/EVA/templates/EVA/index.html
@@ -18,6 +18,7 @@
 
             </div>
         </div>
+        <input id="datos_token" hidden value="{{ datos }}">
     {% endblock %}
     </body>
 </html>
