EVA-58 Feat: Se agrega una condición al inicio de sesión para poder desplegar las notificaciones Se pone el input agregado al template dentro del form para que pueda ser capturado y enviado a la vista Se agrega una condición a la vista que pregunta si contiene datos extra, para renderizarlo despues del inicio de sesión

--- a/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
@@ -45,6 +45,7 @@
                                     ¿Olvidó su contraseña?
                                 </a>
                             </div>
+                            <input id="datos_token" name="datos" hidden value="{{ datos }}">
                             <div class="row no-gutters">
                                 <div class="col-lg-6 pl-lg-1 my-2">
                                     <button id="js-login-btn" type="submit" class="btn btn-danger btn-block ">Iniciar sesión</button>
@@ -56,6 +57,5 @@
             </div>
         </div>
     </div>
-    <input id="datos_token" hidden value="{{ datos }}">
 {% endblock %}
 
