--- a/EVA/templates/EVA/_common/header.html
+++ b/EVA/templates/EVA/_common/header.html
@@ -43,7 +43,7 @@
     <div class="ml-auto d-flex">
         <!-- app notification -->
         <div>
-            <a href="#" class="header-icon" data-toggle="dropdown" title="Haz clic para ver tus notificaciones">
+            <a href="#" class="header-icon" id="btn_not" data-toggle="dropdown" title="Haz clic para ver tus notificaciones">
                 <i class="fal fa-bell"></i>
                 <span class="badge badge-icon" id="icono_not" style="display: none"></span>
             </a>
