--- a/SGI/templates/SGI/CadenasAprobacion/index.html
+++ b/SGI/templates/SGI/CadenasAprobacion/index.html
@@ -24,7 +24,7 @@
                     {% if perms.SGI.add_cadenaaprobacionencabezado %}
                     <div class="panel-hdr">
                         <small>
-                             <a class="far fa-3x far fa-plus-circle"  href="#" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar Cadena de Aprobación"></a>
+                             <a class="far fa-3x far fa-plus-circle"  href="{% url 'SGI:cadenas-aprobacion-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar Cadena de Aprobación"></a>
                         </small>
                     </div>
                     {% endif %}
@@ -37,7 +37,8 @@
                                             <thead>
                                                 <tr>
                                                     <th>Nombre</th>
-                                                    <th>Usuarios </th>
+                                                    <th>Usuarios</th>
+                                                    <th>Fecha de Creación</th>
                                                     {% if perms.SGI.change_cadenaaprobacionencabezado or perms.SGI.delete_cadenaaprobacionencabezado %}
                                                         <th>Acción</th>
                                                     {% endif %}
@@ -47,11 +48,12 @@
                                                 {% for cadenas in cadenas_aprobacion %}
                                                     <tr>
                                                         <td>{{ cadenas.nombre }}</td>
-                                                        <td>{{ cadenas.usuarios}}</td>
+                                                        <td>{% for detalle in detalles%}{% if detalle.cadena_aprobacion == cadenas %}{{ detalle.usuario.usuario.first_name }}<br>{% endif %}{% endfor %}</td>
+                                                        <td>{{ cadenas.fecha_creacion|date:'Y-m-d H:i' }}</td>
                                                         {% if perms.SGI.change_cadenaaprobacionencabezado or perms.SGI.delete_cadenaaprobacionencabezado %}
                                                         <td>
                                                             {% if perms.SGI.change_cadenaaprobacionencabezado %}
-                                                            <a class="far fa-2x fa-edit"  href="" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                                                            <a class="far fa-2x fa-edit"  href="{% url 'SGI:cadenas-aprobacion-editar' cadenas.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
                                                             {% endif %}
                                                             {% if perms.SGI.delete_cadenaaprobacionencabezado %}
                                                             <a class="far fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ cadenas.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ cadenas.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
