--- a/EVA/templates/EVA/_general_tags/_input_general_tag.html
+++ b/EVA/templates/EVA/_general_tags/_input_general_tag.html
@@ -29,3 +29,12 @@
         </div>
     </div>
 {% endif %}
+{% if tipo == 'radio' %}
+    <br>&nbsp;&nbsp;
+    {% for opcion in opciones %}
+    &nbsp;&nbsp;<div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" class="custom-control-input" id="{{ opcion.texto }}_id" name="{{ nombre }}" value="{{ opcion.valor }}" required>
+        <label class="custom-control-label" for="{{ opcion.texto }}_id">{{ opcion.texto }}</label>
+    </div>
+    {% endfor %}
+{% endif %}
