--- a/SGI/templates/SGI/AprobacionDocumentos/index.html
+++ b/SGI/templates/SGI/AprobacionDocumentos/index.html
@@ -32,6 +32,7 @@
                                                 <tr>
                                                     <th>Nombre</th>
                                                     <th>Versión</th>
+                                                    <th>Usuario</th>
                                                     <th>Notas</th>
                                                     <th>Fecha del Documento</th>
                                                     <th>Acción</th>
@@ -42,6 +43,7 @@
                                                     <tr>
                                                         <td>{{ archivo.archivo.documento.nombre }}</td>
                                                         <td>{{ archivo.archivo.version }}</td>
+                                                        <td>{{ archivo.archivo.usuario.nombre_completo }}</td>
                                                         <td>{{ archivo.archivo.notas }}</td>
                                                         <td>{{ archivo.archivo.fecha_documento|date:'Y-m-d' }}</td>
                                                         <td>
