--- a/SGI/templates/SGI/AprobacionDocumentos/index.html
+++ b/SGI/templates/SGI/AprobacionDocumentos/index.html
@@ -47,7 +47,7 @@
                                                         <td>{{ archivo.archivo.notas }}</td>
                                                         <td>{{ archivo.archivo.fecha_documento|date:'Y-m-d' }}</td>
                                                         <td>
-                                                            <a class="far fa-2x fa-eye" style="padding-left: 10px; text-decoration: none !important;" href="{% url 'sgi:documentos-ver' 0 archivo.archivo.id  %}" target="_blank" data-original-title="Ver"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Ver Documento"></a>
+                                                            <a class="far fa-2x fa-eye" style="padding-left: 10px; text-decoration: none !important;" href="{% url 'sgi:documentos-ver' archivo.archivo.id  %}" target="_blank" data-original-title="Ver"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Ver Documento"></a>
                                                             &nbsp;&nbsp;<a class="far fa-2x fa-check-square"  href="javascript:abrir_modal_accion_documento('{% url 'sgi:aprobacion-documentos-accion' archivo.id %}');" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Aprobar/Rechazar"></a>
                                                         </td>
                                                     </tr>
