--- a/Notificaciones/templates/Notificaciones/ver_todas.html
+++ b/Notificaciones/templates/Notificaciones/ver_todas.html
@@ -17,20 +17,19 @@
                     <div class="titulo_ver_todas">
                         <h2>Tus Notificaciones</h2>
                     </div>
-                    {% for notificacion in Notificaciones %}
                     <div class="divider_not "></div>
-                    <div {% if not notificacion.visto  %}class="no-leido"{% endif %}>
-                        <div class="m-l-20">
-                            <a class="d-flex align-items-center" href="#" onclick="fDetalleNotificacion('{{ notificacion.url }}', {{ notificacion.id }}, {{ notificacion.id_evento }})">
-                                <span class="d-flex flex-column flex-1 ml-1">
-                                    <span class="name"><b>{{ notificacion.titulo }}</b></span>
-                                    <span class="msg-b fs-xs text-dark">{{ notificacion.mensaje }}</span>
-                                    <span class="fs-nano text-muted mt-1">{{ notificacion.fecha }}</span>
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                    {% endfor %}
+                    <ul class="notification" id="cargar_notificaciones" style="overflow: hidden; width: auto; height: 100%;">
+                        {% for notificacion in Notificaciones %}
+                            <li class="{% if notificacion.visto %} read {% else %} unread {% endif %}">
+                                <a href="#" onclick="fDetalleNotificacion('{{ notificacion.url }}', {{ notificacion.id }}, {{ notificacion.id_evento }})" class="d-flex align-items-center">
+                                    <span class="d-flex flex-column flex-1 ml-1"><span class="name">{{ notificacion.titulo }}</span>
+                                        <span class="msg-b fs-xs">{{ notificacion.mensaje }}</span>
+                                        <span class="fs-nano text-muted mt-1">{{ notificacion.fecha }}</span>
+                                    </span>
+                                </a>
+                            </li>
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
         </div>
