--- a/Notificaciones/templates/Notificaciones/CorreoElectronico/correo.html
+++ b/Notificaciones/templates/Notificaciones/CorreoElectronico/correo.html
@@ -8,7 +8,7 @@ Estimado(a) usuario: {{ nombre }}
 <br>
 {% if token %}
 <br>
-Links para acceder a la aplicación EVA:
+Enlaces para acceder a la aplicación EVA:
 <br>
 <br>
 <a target="_blank" href='http://produccion.arios-ing.com:8002/notificaciones/token/{{ token }}'>Acceso Externo</a><br>
@@ -17,7 +17,7 @@ Links para acceder a la aplicación EVA:
 {% endif %}
 </div>
 <br>
-<i>*** Si al hacer click no se abre el enlace, por favor, cópielo y péguelo en su navegador favorito.
+<i>*** Si al hacer clic no se abre el enlace, por favor, cópielo y péguelo en su navegador favorito.
     <br><br>
     <div style="background-color: #f9f9f9; text-align:center; font-family:'Lato','Helvetica Neue',Helvetica,Arial,sans-serif; padding:30px 5px; font-size:12px; line-height:1.2; color:#666666">
     &nbsp;Por favor no responda este correo. Este buzón de mensajes no esta monitoreado y no recibirá ninguna respuesta. </div>
@@ -25,7 +25,5 @@ Links para acceder a la aplicación EVA:
     <div style="background-color: #f9f9f9; text-align:center; font-family:'Lato','Helvetica Neue',Helvetica,Arial,sans-serif; padding:30px 5px; font-size:12px; line-height:1.2; color:#666666">
     &nbsp;AVISO DE CONFIDENCIALIDAD <br>Este mensaje es para uso del destinatario y puede contener información confidencial o protegida por la ley, por lo que el uso, difusión,
     retención o copia con cualquier propósito por personas distintas de su destinatario está prohibido. Si obtiene esta comunicación por error, por favor avise al remitente
-    y proceda a eliminar el original. Este mensaje ha sido revisado por programas antivirus. No obstante, <a href='http://www.arios-ing.com/'> ARIOS INGENIERÍA S.A.S </a> no asume ninguna responsabilidad por eventuales
-    daños generados por el recibo y el uso de este material, siendo responsabilidad del destinatario verificar con sus propios medios la existencia de virus u otros.
-    Antes de imprimir este mensaje, asegúrese que es indispensable. <br>¡Proteger el medio ambiente también está en sus manos!</div>
+    y proceda a eliminar el original. Antes de imprimir este mensaje, asegúrese que es indispensable. <br>¡Proteger el medio ambiente también está en sus manos!</div>
 </i>
