EVA-62 Feat: Se crea un estilo general para el padding top = 0

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -55,3 +55,7 @@ input[type=checkbox] ~ label:before {
 .p-b-0{
     padding-bottom: 0 !important;
 }
+
+.p-t-0{
+    padding-top: 0; !important;
+}
