--- a/Notificaciones/templates/Notificaciones/ver_todas.html
+++ b/Notificaciones/templates/Notificaciones/ver_todas.html
@@ -21,7 +21,7 @@
                     <div class="divider_not "></div>
                     <div {% if not notificacion.visto  %}class="no-leido"{% endif %}>
                         <div class="m-l-20">
-                            <a class="d-flex align-items-center" href="#" onclick="fDetalleNotificacion('{{ notificacion.url }}', {{ notificacion.id }}, {{ notificacion.id_evento }})">
+                            <a class="d-flex align-items-center" href="#" onclick="fDetalleNotificacion('{{ notificacion.url }}', {{ notificacion.id }}, {{ notificacion.id_evento }}, '{{ notificacion.modal }}')">
                                 <span class="d-flex flex-column flex-1 ml-1">
                                     <span class="name"><b>{{ notificacion.titulo }}</b></span>
                                     <span class="msg-b fs-xs text-dark">{{ notificacion.mensaje }}</span>
