--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -59,3 +59,7 @@ input[type=checkbox] ~ label:before {
 .p-t-0{
     padding-top: 0; !important;
 }
+
+.campo_activo{
+    background-color: rgba(233, 233, 233, 0.5); !important;
+}
