--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -60,6 +60,10 @@ input[type=checkbox] ~ label:before {
     padding-top: 0; !important;
 }
 
+.p-l-0{
+    padding-left: 0; !important;
+}
+
 .campo_activo{
     background-color: rgba(233, 233, 233, 0.5); !important;
 }
