EVA-62 Refactor: Se le cambia el color al recuadro del numero de orden en index de cadena de aprobación Porque no se estaba visualizando

--- a/SGI/templates/SGI/CadenasAprobacion/index.html
+++ b/SGI/templates/SGI/CadenasAprobacion/index.html
@@ -54,7 +54,7 @@
                                                                 {% for detalle in detalles%}
                                                                     {% if detalle.cadena_aprobacion == cadenas %}
                                                                         <span class="badge badge-primary">
-                                                                            <span class="badge bg-primary-500 p-l-0"><font style="vertical-align: inherit;">
+                                                                            <span class="badge bg-primary-300"><font style="vertical-align: inherit;">
                                                                                 <font style="vertical-align: inherit;">{{ detalle.orden }}</font></font>
                                                                             </span>
                                                                             <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">{{ detalle.usuario.primer_nombre_apellido }}</font></font>
