EVA-64 Fix: Se corrigen los iconos de Solicitudes de aprobación y Aprobación de Documentos

--- a/SGI/templates/SGI/AprobacionDocumentos/solicitudes_aprobacion.html
+++ b/SGI/templates/SGI/AprobacionDocumentos/solicitudes_aprobacion.html
@@ -14,7 +14,7 @@
     <div class="panel-container show">
         <div class="header">
              <h1 class="header-title">
-                <i class='far fa-handshake'></i> Solicitudes de Aprobación <span class='fw-300'></span>
+                <i class='far fa-tasks'></i> Solicitudes de Aprobación <span class='fw-300'></span>
                  <br>
                  <br>
              </h1>
