--- a/SGI/templates/SGI/AprobacionDocumentos/index.html
+++ b/SGI/templates/SGI/AprobacionDocumentos/index.html
@@ -14,7 +14,7 @@
     <div class="panel-container show">
         <div class="header">
              <h1 class="header-title">
-                <i class='far fa-handshake'></i> Aprobacion de Documentos <span class='fw-300'></span>
+                <i class='far fa-check'></i> Aprobación de Documentos <span class='fw-300'></span>
                  <br>
                  <br>
              </h1>
