EVA-64 Refactor: Se realizan las modificaciones por el cambio de las columnas de Colaborador a Usuario Se modifica el Js de Cadena de aprobación, para cambiar nos nombres de las variables de colaborador a usuario Se modifican los templates para apuntar a las propiedades del modelo de usuario Se modifican las vistas de cadena de aprobación y documentos

--- a/SGI/templates/SGI/AprobacionDocumentos/index.html
+++ b/SGI/templates/SGI/AprobacionDocumentos/index.html
@@ -43,7 +43,7 @@
                                                     <tr>
                                                         <td>{{ archivo.archivo.documento.nombre }}</td>
                                                         <td>{{ archivo.archivo.version }}</td>
-                                                        <td>{{ archivo.archivo.usuario.nombre_completo }}</td>
+                                                        <td>{{ archivo.archivo.usuario.get_full_name }}</td>
                                                         <td>{{ archivo.archivo.notas }}</td>
                                                         <td>{{ archivo.archivo.fecha_documento|date:'Y-m-d' }}</td>
                                                         <td>
