EVA-64 Refactor: Se realizan modificaciones para que sea opcional la cadena de aprobacion en documento Se crea el evento desencadenador "Aprobación Directa" Se modifica el modelo de Documento y Archivo para que cadena de aprobación pueda quedar en blanco Se configura el select en crear y editar para que no sea obligatorio Se agrega la accion de ACCION_APROBACION_DIRECTA a la funcion AccionAprobacionDocumentosView Se agregan condicionales para saber cuando no se cuenta con cadena de aprobación y realizar las acciones necesarias Se agrega el evento desencadenador a la migración

--- a/SGI/templates/SGI/documentos/crear-editar.html
+++ b/SGI/templates/SGI/documentos/crear-editar.html
@@ -46,7 +46,7 @@
                                     <div class="form-group">
                                         <div class="form-row">
                                             <div class="col-md-6">
-                                                    {% select_tag cadenas_aprobacion 'cadena_aprobacion_id' 'Seleccione una cadena de aprobación' texto_label="Cadena de Aprobación" value=documento.cadena_aprobacion_id required="" mensaje_validacion='Por favor seleccione una cadena de aprobación' invalido=errores.cadena_aprobacion %}
+                                                    {% select_tag cadenas_aprobacion 'cadena_aprobacion_id' 'Seleccione una cadena de aprobación' texto_label="Cadena de Aprobación (Opcional)" value=documento.cadena_aprobacion_id mensaje_validacion='Por favor seleccione una cadena de aprobación' invalido=errores.cadena_aprobacion %}
                                             </div>
                                         </div>
                                     </div>
