EVA-64 Feat: Se agrega el dataTable a la tabla index de cadenas de aprobación

--- a/SGI/templates/SGI/CadenasAprobacion/index.html
+++ b/SGI/templates/SGI/CadenasAprobacion/index.html
@@ -103,4 +103,5 @@
     <script src="{% static 'SGI/js/confirmarEliminarSGI.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.export.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/exportar_tabla.js' %}"></script>
+    <script src="{% static 'SGI/js/dataTableSGI.js' %}"></script>
 {% endblock %}
