--- a/SGI/templates/SGI/CadenasAprobacion/index.html
+++ b/SGI/templates/SGI/CadenasAprobacion/index.html
@@ -57,7 +57,13 @@
                                                                             <span class="badge bg-primary-300"><font style="vertical-align: inherit;">
                                                                                 <font style="vertical-align: inherit;">{{ detalle.orden }}</font></font>
                                                                             </span>
-                                                                            <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">{{ detalle.usuario.get_full_name }}</font></font>
+                                                                            <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+                                                                                {% for col in colaboradores %}
+                                                                                    {% if col.usuario_id == detalle.usuario_id %}
+                                                                                        {{ col.primer_nombre_apellido }}
+                                                                                    {% endif %}
+                                                                                {% endfor %}
+                                                                            </font></font>
                                                                         </span>
                                                                     {% endif %}
                                                                 {% endfor %}
