--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -64,6 +64,10 @@ input[type=checkbox] ~ label:before {
     padding-left: 0 !important;
 }
 
+.p-t-10{
+    padding-top: 10px !important;
+}
+
 .campo_activo{
     background-color: rgba(233, 233, 233, 0.5); !important;
 }
