--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
@@ -62,7 +62,7 @@
                                     </div>
                                     <div class="row" id="js-contacts">
                                         {% for colaborador in colaboradores %}
-                                            {% include 'TalentoHumano/_common/_tarjeta_empleado.html' with grupo_sanguineo=colaborador.grupo_sanguineo identificacion=colaborador.identificacion id_tarjeta=colaborador.id foto_perfil=colaborador.foto_perfil.url nombre=colaborador.nombre_completo  cargo=colaborador.cargo  correo=colaborador.usuario.email direccion=colaborador.direccion telefono=colaborador.telefono%}
+                                            {% include 'TalentoHumano/_common/_tarjeta_empleado.html' with colaborador=colaborador grupo_sanguineo=colaborador.grupo_sanguineo identificacion=colaborador.identificacion id_tarjeta=colaborador.id foto_perfil=colaborador.foto_perfil.url nombre=colaborador.nombre_completo  cargo=colaborador.cargo  correo=colaborador.usuario.email direccion=colaborador.direccion telefono=colaborador.telefono%}
                                         {% endfor %}
                                     </div>
                                 </div>
