--- a/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
@@ -20,7 +20,7 @@
                         <a class="dropdown-item" href="{% url 'TalentoHumano:colaboradores-editar' id_tarjeta %}">Editar</a>
                         {% endif %}
                         {% if perms.Notificaciones.add_eventodesencadenador %}
-                        <a class="dropdown-item" href="{% url 'Notificaciones:notificaciones-asignacion' id_tarjeta %}">Asignar Notificaciones</a>
+                        <a class="dropdown-item" href="{% url 'Notificaciones:notificaciones-asignacion' colaborador.usuario_id %}">Asignar Notificaciones</a>
                         {% endif %}
                         {% if perms.TalentoHumano.delete_colaborador %}
                         <a class="dropdown-item" href="javascript:void(0);" id="eliminar_{{ id_tarjeta }}"   onclick="fConfirmarEliminar({{ id_tarjeta }})">Eliminar</a>
